--- a/design.org
+++ b/design.org
@@ -25,7 +25,7 @@ perhaps also [[http://docs.oracle.com/javase/8/docs/api/javax/sound/sampled/Data
 * java8 lambda
 ** class::method syntax
    http://stackoverflow.com/q/22663112/1093528 (via #java:idletask)
-** shove generics in?
+** shove generics in
    ClassName::<String>new (via #java:surial)
 ** type inference (generics inference?)
    (idletask)
