--- a/design.org
+++ b/design.org
@@ -9,9 +9,9 @@ perhaps also [[http://docs.oracle.com/javase/8/docs/api/javax/sound/sampled/Data
 
 
 * features
-** load files
+** DONE load files
 ** patterns of playback beyond simple looping
-** DONE data file loading (json)
+** TODO data file loading (json) jackson
 
 * ideas
 ** port csound dsp
