--- a/design.org
+++ b/design.org
@@ -17,6 +17,7 @@ io via [[http://docs.oracle.com/javase/8/docs/api/javax/sound/sampled/AudioSyste
 ** DONE stop
 ** DONE toggle
 ** TODO embedded clip
+** TODO removing unused embedded clips
 *** DONE isRunning();
 * TODO features for UGens
 ** DONE amplitude factor
